[package]
name = "frame-decode"
version = "0.1.0"
authors = ["Tim Ryan <trim@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.11"
bytemuck = { version = "1.4", features = ["derive"] }
wgpu = "0.6"
futures = { version = "0.3", default-features = false, features = ["std"] }
winit = { version = "0.23.0", features = ["web-sys"] }
log = "0.4"
byteorder="*"
cgmath = "0.17"
num = "0.3"
microfft = "0.3"
biquad = "0.3"

num-complex = { version = "0.2", features = ["std"]}
num-traits = "*"
realfft = "0.3"
rustfft = "*"
ndarray = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.subscriber]
package = "wgpu-subscriber"
version = "0.1"
