[package]
name = "fb2d"
version = "0.1.0"
authors = ["Tim Ryan <trim@fb.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linuxfb = "0.2.0"
cc = "1.0.61"
crossbeam = "0.8"
itertools = "*"
rayon = "*"

[build-dependencies]
cc = "1.0"

[profile.dev]
opt-level = 3
lto = true
