[package]
name = "wtf"
version = "0.1.0"
authors = ["Tim Ryan <trim@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
microfft = "*"

num-complex = { version = "0.2", features = ["std"]}
num-traits = "*"
realfft = "0.3"
rustfft = "*"
